# gtl

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile  mainpage.dox
gtl/: box2.hpp  box3.hpp  circle.hpp  circle2.hpp  complex.hpp  gtl.hpp  matrix3.hpp  matrix4.hpp  plane.hpp  quaternion.hpp  ray.hpp  sphere.hpp  vec2.hpp  vec3.hpp  vec4.hpp  xfbox3.hpp
tests/: CMakeLists.txt  main.cpp  testBox2.cpp  testBox3.cpp  testCircle.cpp  testCircle2.cpp  testComplex.cpp  testMatrix3.cpp  testMatrix4.cpp  testPlane.cpp  testQuat.cpp  testRay.cpp  testSphere.cpp  testVec2.cpp  testVec3.cpp  testVec4.cpp  tests.pro
tests/gtest/: gtest-all.cc  gtest.h
